Auto expand variations should hide expand/collapse buttons https://github.com/Siderite/lichessTools/issues/1227

--- a/tools/expandAll/tool.css
+++ b/tools/expandAll/tool.css
@@ -9,6 +9,10 @@ body.lichessTools button.lichessTools-expandAll+index {
   flex-basis: 6.66%;
 }
 
+body.lichessTools .lichessTools-expandAllVariations a.disclosure {
+  display:none;
+}
+
 @media print {
   body.lichessTools button.lichessTools-expandAll {
     display: none;
